third_party/move/move-compiler-v2/tests/more-v1/parser/function_visibility_invalid.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/function_visibility_invalid.move:2:5
  │
2 │     public(invalid_modifier) fun f() {}
  │     ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid visibility modifier. Consider removing it or using 'public', 'public(friend)', or 'public(package)'
